<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    A linear layout is used here as we have to simply stack
    three views vertically on top of each other (similar to the
    welcome screen).
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        tools:context=".ui.WelcomeFragment">

        <TextView
            android:id="@+id/tv_instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/instructions_title"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_instructions_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:padding="20dp"
            android:text="@string/instructions_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btn_instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instructions_title" />

        <Button
            android:id="@+id/btn_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/to_shoe_list"/>

    </LinearLayout>

</layout>